--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "method-override": "~1.0.0",
     "mongoose": "^4.4.16",
     "morgan": "~1.0.0",
+    "node-fetch": "^1.5.3",
     "passport": "^0.3.2",
     "passport-openid": "^0.4.0",
     "passport-wargaming": "0.0.1"
